--- a/css/site.css
+++ b/css/site.css
@@ -31,7 +31,7 @@
         .success-text {
             padding-bottom: 20px;
             font-size: 62px;
-            line-height: 73px;
+            line-height: 146px;
         }
 
         .description {
@@ -68,7 +68,7 @@
         }
 		
 		.step-text a {
-            color: red;
+            color: white;
 			text-decoration: none;
         }
 		
